--- a/gallery/style.css
+++ b/gallery/style.css
@@ -59,7 +59,7 @@ body {
 }
 
 .block-3 {
-    background: url("img3.jpg") no-repeat 50% 50%;
+    background: url("img3.jpeg") no-repeat 50% 50%;
     background-size: cover;
 }
 
@@ -99,7 +99,7 @@ body {
 }
 
 .block-11 {
-    background: url("img11.jpg") no-repeat 50% 50%;
+    background: url("img11.jpeg") no-repeat 50% 50%;
     background-size: cover;
 }
 
