--- a/gallery/style.css
+++ b/gallery/style.css
@@ -59,7 +59,7 @@ body {
 }
 
 .block-3 {
-    background: url("img3.jpg") no-repeat 50% 50%;
+    background: url("img3.jpeg") no-repeat 50% 50%;
     background-size: cover;
 }
 
@@ -99,7 +99,7 @@ body {
 }
 
 .block-11 {
-    background: url("img11.jpg") no-repeat 50% 50%;
+    background: url("img11.jpeg") no-repeat 50% 50%;
     background-size: cover;
 }
 
@@ -110,5 +110,60 @@ body {
 
 .block-13 {
     background: url("img13.jpg") no-repeat 50% 50%;
+    background-size: cover;
+}
+
+.block-14 {
+    background: url("img14.jpg") no-repeat 50% 50%;
+    background-size: cover;
+}
+
+.block-15 {
+    background: url("img15.jpg") no-repeat 50% 50%;
+    background-size: cover;
+}
+
+.block-16 {
+    background: url("img16.jpg") no-repeat 50% 50%;
+    background-size: cover;
+}
+
+.block-17 {
+    background: url("img17.jpg") no-repeat 50% 50%;
+    background-size: cover;
+}
+
+.block-18 {
+    background: url("img18.jpg") no-repeat 50% 50%;
+    background-size: cover;
+}
+
+.block-19 {
+    background: url("img19.jpg") no-repeat 50% 50%;
+    background-size: cover;
+}
+
+.block-20 {
+    background: url("img20.jpg") no-repeat 50% 50%;
+    background-size: cover;
+}
+
+.block-21 {
+    background: url("img21.jpg") no-repeat 50% 50%;
+    background-size: cover;
+}
+
+.block-22 {
+    background: url("img22.jpg") no-repeat 50% 50%;
+    background-size: cover;
+}
+
+.block-23 {
+    background: url("img23.jpg") no-repeat 50% 50%;
+    background-size: cover;
+}
+
+.block-24 {
+    background: url("img24.jpg") no-repeat 50% 50%;
     background-size: cover;
 }
